--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@codengage/core",
+  "name": "@codengage/domain",
   "version": "1.0.0",
   "private": true,
   "main": "dist/index.js",
