--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -6,7 +6,9 @@
   "module": "src/index.ts",
   "scripts": {
     "dev": "nodemon",
-    "build": "tsc --build"
+    "build": "tsc --build",
+    "test": "jest --no-cache --colors --noStackTrace --passWithNoTests --runInBand",
+    "test:watch": "yarn test -- --watch"
   },
   "dependencies": {
     "@codengage/criptography": "*",
@@ -24,12 +26,15 @@
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
+    "@types/jest": "^26.0.15",
     "@types/koa": "^2.11.5",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa__cors": "^3.0.2",
     "@types/koa__router": "^8.0.3",
     "@types/node": "^14.14.6",
+    "jest": "^26.6.2",
     "nodemon": "^2.0.5",
+    "ts-jest": "^26.4.3",
     "tslib": "^2.0.3",
     "typescript": "^4.0.5"
   }
