feat(api): config jest with ts

--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -8,11 +8,11 @@
   "references": [
     { "path": "../fp" },
     { "path": "../domain" },
-    { "path": "../http-server"},
+    { "path": "../http-server" },
     { "path": "../http-server-koa" },
     { "path": "../criptography" },
     { "path": "../criptography-jwt" },
     { "path": "../criptography-bcrypt" }
   ],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "**/*.spec.ts", "**/test/**"]
 }
